test/Tests/Interface/ComponentMismatch.golden

test\Tests\Interface\ComponentMismatch.hs:56:5: error:
    * Interface mismatch at location 0.
      Output named "out" of Vertex shader named "main" has underlying type V 4
                                                                             Float,
      whereas input named "in1" of Fragment shader named "main" has underlying type V 3
                                                                                      Float.
    * In the expression:
        ShaderPipeline
          $ StructInput @VertexInput @(Triangle List)
              :>-> (vertex, "vertex.spv")
              :>-> (fragment, "fragment.spv")
      In an equation for `shaderPipeline':
          shaderPipeline
            = ShaderPipeline
                $ StructInput @VertexInput @(Triangle List)
                    :>-> (vertex, "vertex.spv")
                    :>-> (fragment, "fragment.spv")
   |
56 |   = ShaderPipeline 
   |     ^^^^^^^^^^^^^^^^...
